--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -838,7 +838,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
-        // 根据GFN遍历EPT页表的对应项
+        // 根据gpa遍历EPT页表的对应项
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
@@ -855,9 +855,11 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 drop_large_spte(vcpu, it.sptep);
                 /* 判断当前entry指向的页表是否存在，不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
+                        // 当前entry指向的页表不存在
+                        // 获取一个页
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
-
+                        // 设置页表项的sptep指针指向sp
                         link_shadow_page(vcpu, it.sptep, sp);
                         if (account_disallowed_nx_lpage)
                                 account_huge_nx_page(vcpu->kvm, sp);
