--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -838,7 +838,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
-        // 根据gpa遍历EPT页表的对应项
+        // 遍历EPT页表的对应项
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
