--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -839,7 +839,9 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
         // 遍历EPT页表的对应项
+        // 起始状态:
         // it.level = vcpu->arch.mmu->shadow_root_level
+        // it.add = gpa
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
