--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -840,8 +840,11 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
         // 遍历EPT页表的对应项
         // 起始状态:
-        // it.level = vcpu->arch.mmu->shadow_root_level
+        // it.level = vcpu->arch.mmu->shadow_root_level, 影子页表的级数，EPT情况下这个是4
         // it.add = gpa
+        // it.shadow_addr = vcpu->arch.mmu->root_hpa, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer
+        // 终止条件:
+        // it.level < PT_PAGE_TABLE_LEVEL(1)
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
