--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -845,6 +845,8 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         // it.shadow_addr = vcpu->arch.mmu->root_hpa, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer
         // 终止条件:
         // it.level < PT_PAGE_TABLE_LEVEL(1)
+        // 循环:
+        // --it.level
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
