--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -845,8 +845,10 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         // it.shadow_addr = vcpu->arch.mmu->root_hpa, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer
         // 终止条件:
         // it.level < PT_PAGE_TABLE_LEVEL(1)
+        // 当it.spte(页表项)是最后一level时, 会设置it.level=0
         // 循环:
         // --it.level
+        // it.shadow_addr = spte & PT64_BASE_ADDR_MASK
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
