--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -838,7 +838,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
-        // 遍历EPT页表的对应项
+        // 遍历ept四级页表
         // 起始状态:
         // it.level = vcpu->arch.mmu->shadow_root_level, 影子页表的级数，EPT情况下这个是4
         // it.add = gpa
@@ -867,16 +867,16 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 /* 判断当前entry指向的页表是否存在，不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
                         // 当前entry指向的页表不存在
-                        // 获取一个页
+                        // 获取一个页, mmu page
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
-                        // 设置页表项的sptep指针指向sp
+                        // 将当前的mmu page的地址写入到上一级别mmu page的pte中
                         link_shadow_page(vcpu, it.sptep, sp);
                         if (account_disallowed_nx_lpage)
                                 account_huge_nx_page(vcpu->kvm, sp);
                 }
         }
-
+        // 设置pte，页表下一级的page地址就是pfn写入到pte
         ret = mmu_set_spte(vcpu, it.sptep, ACC_ALL,
                            write, level, base_gfn, pfn, prefault,
                            map_writable);
