--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -855,7 +855,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                  * large page, as the leaf could be executable.
                  */
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
-
+                // 
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
@@ -864,7 +864,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                         break;
                 // 
                 drop_large_spte(vcpu, it.sptep);
-                /* 判断当前entry指向的页表是否存在，不存在的话需要建立 */
+                /* 判断当前entry指向的页表是否存在，也就是缺页, 不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
                         // 当前entry指向的页表不存在
                         // 获取一个页, mmu page
