--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -19,6 +19,7 @@
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
+      - [for_each_shadow_entry](#for_each_shadow_entry)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -950,6 +951,25 @@ static int kvm_mmu_hugepage_adjust(struct kvm_vcpu *vcpu, gfn_t gfn,
 3. 调用`kvm_mmu_alloc_page`创建新的`struct kvm_mmu_page`
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
+
+
+#### for_each_shadow_entry
+
+```cpp
+#define for_each_shadow_entry(_vcpu, _addr, _walker)            \
+        for (shadow_walk_init(&(_walker), _vcpu, _addr);        \
+             shadow_walk_okay(&(_walker));                      \
+             shadow_walk_next(&(_walker)))
+```
+
+三个参数的含义
+
+- `_vcpu`：对应`kvm_vcpu`结构体的指针。
+- `_addr`：如果是**ETP**的话，是GuestOS的**物理地址**
+- `_walker`：游标
+
+说白了其实就是一个for循环，只不过循环的三个部分由三个函数组成
+
 
 # 6. 参考
 
