--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1008,7 +1008,7 @@ struct kvm_shadow_walk_iterator {
     u64 addr;//寻找的GuestOS的物理地址，即(u64)gfn << PAGE_SHIFT  
     hpa_t shadow_addr;//当前EPT页表基地址
     u64 *sptep;//指向下一级EPT页表的指针/
-    int level;//当前所处的页表级别
+    int level;//当前查找所处的页表级别
     unsigned index;//对应于addr的表项在当前页表的索引  
 };
 ```
@@ -1017,33 +1017,31 @@ struct kvm_shadow_walk_iterator {
 
 - `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer, 指向**EPT页表基地址**，
 - addr是GPA的客户物理地址，
-- level是当前iterator所处的级别，其值会随着一层一层的遍历递减。
-
-
-
-        // 起始状态:
-        // it.level = vcpu->arch.mmu->shadow_root_level, 影子页表的级数，EPT情况下这个是4
-        // it.add = gpa
-        // it.shadow_addr = vcpu->arch.mmu->root_hpa, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer
-        // 终止条件:
-        // it.level < PT_PAGE_TABLE_LEVEL(1)
-        // 当it.spte(页表项)是最后一level时, 会设置it.level=0
-        // 循环:
-        // --it.level
-        // it.shadow_addr = spte & PT64_BASE_ADDR_MASK
-
+- `level = vcpu->arch.mmu->shadow_root_level`, 影子页表的级数，EPT情况下这个是4是当前iterator所处的级别，其值会随着一层一层的遍历递减。
 
 然后看循环条件
 
 ```cpp
 static bool shadow_walk_okay(struct kvm_shadow_walk_iterator *iterator)
 {
+        // < 1
         if (iterator->level < PT_PAGE_TABLE_LEVEL)
                 return false;
 
         iterator->index = SHADOW_PT_INDEX(iterator->addr, iterator->level);
         iterator->sptep = ((u64 *)__va(iterator->shadow_addr)) + iterator->index;
         return true;
+}
+```
+
+循环的条件比较简单，就是判断是否循环到了**最后一级的页表**，即`iterator.level < 1`, 如果`iterator.level`**递减到0**，则**本次页表构建过程也完毕**了。如果iterator还**没有到最后一级**，则需要设置**iterator的index**, 这是要**寻找的addr**在**本级页表**中对应的**页表项索引**，然后设置`iterator->sptep`，指向**下一级的页表页**。
+
+处理函数：
+
+```cpp
+static void shadow_walk_next(struct kvm_shadow_walk_iterator *iterator)
+{
+        __shadow_walk_next(iterator, *iterator->sptep);
 }
 
 static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
@@ -1057,12 +1055,9 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
         iterator->shadow_addr = spte & PT64_BASE_ADDR_MASK;
         --iterator->level;
 }
-
-static void shadow_walk_next(struct kvm_shadow_walk_iterator *iterator)
-{
-        __shadow_walk_next(iterator, *iterator->sptep);
-}
 ```
+
+正如前面所说，此过程是**往后移动iterator的过程**，当level为`PT_PAGE_TABLE_LEVEL`即**1**的时候，此时应该**设置对应的页表**指向**对应的页**了，而**不需要再次往后遍历**，所以，就直接return，否则，需要往后移动iterator，设置**iterator**的`shadow_addr`和level。
 
 # 6. 参考
 
