--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1006,18 +1006,18 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
 ```cpp
 struct kvm_shadow_walk_iterator {
     u64 addr;//寻找的GuestOS的物理地址，即(u64)gfn << PAGE_SHIFT  
-    hpa_t shadow_addr;//当前EPT页表基地址
-    u64 *sptep;//指向下一级EPT页表的指针/
+    hpa_t shadow_addr;//指向下一个要找的EPT页表基地址
+    u64 *sptep;//指向当前页表项地址
     int level;//当前查找所处的页表级别
-    unsigned index;//对应于addr的表项在当前页表的索引  
+    unsigned index;//对应于addr的表项在当前页表的索引
 };
 ```
 
 **每一级的遍历**通过一个`kvm_shadow_walk_iterator`进行，其中各个字段的意义已经注明，我们只需要明白**初始状态**
 
-- `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的EPT_pointer, 指向**EPT页表基地址**，
-- addr是GPA的客户物理地址，
-- `level = vcpu->arch.mmu->shadow_root_level`, 影子页表的级数，EPT情况下这个是4是当前iterator所处的级别，其值会随着一层一层的遍历递减。
+- `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的`EPT_pointer`, 指向**EPT页表基地址**，下一个要查找的页表就是当前vCPU的根页表目录
+- `addr`是GPA的客户物理地址, 要查找的虚拟机物理地址
+- `level = vcpu->arch.mmu->shadow_root_level`, **影子页表的级数**，EPT情况下这个是**4**是当前iterator所处的级别，其值会随着一层一层的遍历递减。
 
 然后看循环条件
 
@@ -1029,12 +1029,15 @@ static bool shadow_walk_okay(struct kvm_shadow_walk_iterator *iterator)
                 return false;
 
         iterator->index = SHADOW_PT_INDEX(iterator->addr, iterator->level);
+        // 获取GuestOS物理地址在EPT页表对应级别的页表项地址
         iterator->sptep = ((u64 *)__va(iterator->shadow_addr)) + iterator->index;
         return true;
 }
 ```
 
-循环的条件比较简单，就是判断是否循环到了**最后一级的页表**，即`iterator.level < 1`, 如果`iterator.level`**递减到0**，则**本次页表构建过程也完毕**了。如果iterator还**没有到最后一级**，则需要设置**iterator的index**, 这是要**寻找的addr**在**本级页表**中对应的**页表项索引**，然后设置`iterator->sptep`，指向**下一级的页表页**。
+循环的条件比较简单，就是判断是否循环到了**最后一级的页表**，即`iterator.level < 1`, 如果`iterator.level`**递减到0**，则**本次页表构建过程也完毕**了。
+
+如果iterator还**没有到最后一级**，则需要设置**iterator的index**, 这是要**寻找的addr**在**本级页表**中对应的**页表项索引**，然后设置`iterator->sptep`，指向**下一级的页表页**。
 
 处理函数：
 
@@ -1051,7 +1054,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
                 iterator->level = 0;
                 return;
         }
-
+        // 这个是下一级页表的物理地址
         iterator->shadow_addr = spte & PT64_BASE_ADDR_MASK;
         --iterator->level;
 }
