--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -861,7 +861,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                         // 获取一个页, mmu page
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
-                        // 将当前的mmu page的地址写入到上一级别mmu page的pte中
+                        // 将当前的mmu page(sp)的地址写入到mmu page的pte中
                         link_shadow_page(vcpu, it.sptep, sp);
                         if (account_disallowed_nx_lpage)
                                 account_huge_nx_page(vcpu->kvm, sp);
@@ -952,8 +952,7 @@ static int kvm_mmu_hugepage_adjust(struct kvm_vcpu *vcpu, gfn_t gfn,
              shadow_walk_next(&(_walker)))
 ```
 
-可以看下数据结构里面那个图
-
+![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
 
 三个参数的含义
 
