--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -942,6 +942,102 @@ static int kvm_mmu_hugepage_adjust(struct kvm_vcpu *vcpu, gfn_t gfn,
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
 
+```cpp
+static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
+                                             gfn_t gfn,
+                                             gva_t gaddr,
+                                             unsigned level,
+                                             int direct,
+                                             unsigned int access)
+{
+        union kvm_mmu_page_role role;
+        unsigned quadrant;
+        struct kvm_mmu_page *sp;
+        bool need_sync = false;
+        bool flush = false;
+        int collisions = 0;
+        LIST_HEAD(invalid_list);
+
+        role = vcpu->arch.mmu->mmu_role.base;
+        role.level = level;
+        role.direct = direct;
+        if (role.direct)
+                role.gpte_is_8_bytes = true;
+        role.access = access;
+        /* quadrant 对应页表项的索引，来自于GPA */
+        if (!vcpu->arch.mmu->direct_map
+            && vcpu->arch.mmu->root_level <= PT32_ROOT_LEVEL) {
+                quadrant = gaddr >> (PAGE_SHIFT + (PT64_PT_BITS * level));
+                quadrant &= (1 << ((PT32_PT_BITS - PT64_PT_BITS) * level)) - 1;
+                role.quadrant = quadrant;
+        }
+        /*根据gfn遍历KVM维护的mmu_page_hash哈希链表*/
+        for_each_valid_sp(vcpu->kvm, sp, gfn) {
+                if (sp->gfn != gfn) {
+                        collisions++;
+                        continue;
+                }
+
+                if (!need_sync && sp->unsync)
+                        need_sync = true;
+
+                if (sp->role.word != role.word)
+                        continue;
+
+                if (sp->unsync) {
+                        /* The page is good, but __kvm_sync_page might still end
+                         * up zapping it.  If so, break in order to rebuild it.
+                         */
+                        if (!__kvm_sync_page(vcpu, sp, &invalid_list))
+                                break;
+
+                        WARN_ON(!list_empty(&invalid_list));
+                        kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu);
+                }
+
+                if (sp->unsync_children)
+                        kvm_make_request(KVM_REQ_MMU_SYNC, vcpu);
+
+                __clear_sp_write_flooding_count(sp);
+                trace_kvm_mmu_get_page(sp, false);
+                goto out;
+        }
+        /*如果根据页框号没有遍历到合适的page，就需要重新创建一个页*/
+        ++vcpu->kvm->stat.mmu_cache_miss;
+
+        sp = kvm_mmu_alloc_page(vcpu, direct);
+        /*设置其对应的客户机物理页框号*/
+        sp->gfn = gfn;
+        sp->role = role;
+        /*把该也作为一个节点加入到哈希表相应的链表汇总*/
+        hlist_add_head(&sp->hash_link,
+                &vcpu->kvm->arch.mmu_page_hash[kvm_page_table_hashfn(gfn)]);
+        if (!direct) {
+                /*
+                 * we should do write protection before syncing pages
+                 * otherwise the content of the synced shadow page may
+                 * be inconsistent with guest page table.
+                 */
+                account_shadowed(vcpu->kvm, sp);
+                if (level == PT_PAGE_TABLE_LEVEL &&
+                      rmap_write_protect(vcpu, gfn))
+                        kvm_flush_remote_tlbs_with_address(vcpu->kvm, gfn, 1);
+
+                if (level > PT_PAGE_TABLE_LEVEL && need_sync)
+                        flush |= kvm_sync_pages(vcpu, gfn, &invalid_list);
+        }
+        clear_page(sp->spt);
+        trace_kvm_mmu_get_page(sp, true);
+
+        kvm_mmu_flush_or_zap(vcpu, &invalid_list, false, flush);
+out:
+        if (collisions > vcpu->kvm->stat.max_mmu_page_hash_collisions)
+                vcpu->kvm->stat.max_mmu_page_hash_collisions = collisions;
+        return sp;
+}
+```
+
+一个`kvm_mmu_page`对应于一个`kvm_mmu_page_role`，`kvm_mmu_page_role`记录对应page的各种属性。下面for_each_gfn_sp是一个遍历链表的宏定义，KVM为了根据GFN查找对应的kvm_mmu_page，用一个HASH数组记录所有的kvm_mmu_page，每一个表项都是一个链表头，即根据GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
 
 #### for_each_shadow_entry
 
