--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -957,7 +957,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
         bool flush = false;
         int collisions = 0;
         LIST_HEAD(invalid_list);
-
+        // 设置该mmu page的属性
         role = vcpu->arch.mmu->mmu_role.base;
         role.level = level;
         role.direct = direct;
@@ -971,7 +971,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
                 quadrant &= (1 << ((PT32_PT_BITS - PT64_PT_BITS) * level)) - 1;
                 role.quadrant = quadrant;
         }
-        /*根据gfn遍历KVM维护的mmu_page_hash哈希链表*/
+        /* 根据gfn遍历KVM维护的可用的mmu_page_hash哈希链表 */
         for_each_valid_sp(vcpu->kvm, sp, gfn) {
                 if (sp->gfn != gfn) {
                         collisions++;
@@ -1000,6 +1000,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
 
                 __clear_sp_write_flooding_count(sp);
                 trace_kvm_mmu_get_page(sp, false);
+                // 如果能找到, 直接返回
                 goto out;
         }
         /*如果根据页框号没有遍历到合适的page，就需要重新创建一个页*/
@@ -1026,6 +1027,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
                 if (level > PT_PAGE_TABLE_LEVEL && need_sync)
                         flush |= kvm_sync_pages(vcpu, gfn, &invalid_list);
         }
+        // 暂时对所有表项清零
         clear_page(sp->spt);
         trace_kvm_mmu_get_page(sp, true);
 
@@ -1037,7 +1039,11 @@ out:
 }
 ```
 
-一个`kvm_mmu_page`对应于一个`kvm_mmu_page_role`，`kvm_mmu_page_role`记录对应page的各种属性。下面for_each_gfn_sp是一个遍历链表的宏定义，KVM为了根据GFN查找对应的kvm_mmu_page，用一个HASH数组记录所有的kvm_mmu_page，每一个表项都是一个链表头，即根据GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
+一个`kvm_mmu_page`对应于一个`kvm_mmu_page_role`，`kvm_mmu_page_role`记录对应**page的各种属性**。
+
+下面`for_each_valid_sp`是一个遍历链表的宏定义，KVM为了根据**GFN**查找对应的`kvm_mmu_page`，用一个**HASH数组**记录**所有**的`kvm_mmu_page`，**每一个表项**都是一个**链表头**，即根据GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
+
+如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，不错这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。这样分配好后，把对应的`kvm_mmu_page`作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
 #### for_each_shadow_entry
 
