--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -877,60 +877,9 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 }
 ```
 
-先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整
+先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-```cpp
-static int kvm_mmu_hugepage_adjust(struct kvm_vcpu *vcpu, gfn_t gfn,
-                                   int max_level, kvm_pfn_t *pfnp)
-{
-        struct kvm_memory_slot *slot;
-        struct kvm_lpage_info *linfo;
-        kvm_pfn_t pfn = *pfnp;
-        kvm_pfn_t mask;
-        int level;
-
-        if (unlikely(max_level == PT_PAGE_TABLE_LEVEL))
-                return PT_PAGE_TABLE_LEVEL;
-
-        if (is_error_noslot_pfn(pfn) || kvm_is_reserved_pfn(pfn))
-                return PT_PAGE_TABLE_LEVEL;
-
-        slot = gfn_to_memslot_dirty_bitmap(vcpu, gfn, true);
-        if (!slot)
-                return PT_PAGE_TABLE_LEVEL;
-
-        max_level = min(max_level, max_page_level);
-        for ( ; max_level > PT_PAGE_TABLE_LEVEL; max_level--) {
-                linfo = lpage_info_slot(gfn, slot, max_level);
-                if (!linfo->disallow_lpage)
-                        break;
-        }
-
-        if (max_level == PT_PAGE_TABLE_LEVEL)
-                return PT_PAGE_TABLE_LEVEL;
-
-        level = host_pfn_mapping_level(vcpu, gfn, pfn, slot);
-        if (level == PT_PAGE_TABLE_LEVEL)
-                return level;
-
-        level = min(level, max_level);
-
-        /*
-         * mmu_notifier_retry() was successful and mmu_lock is held, so
-         * the pmd can't be split from under us.
-         */
-        mask = KVM_PAGES_PER_HPAGE(level) - 1;
-        VM_BUG_ON((gfn & mask) != (pfn & mask));
-        *pfnp = pfn & ~mask;
-
-        return level;
-}
-```
-
-
-然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
-
-构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用link_shadow_page设置页表项指向page
+构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用`link_shadow_page`设置页表项指向page
 
 对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
