--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -846,7 +846,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                  * large page, as the leaf could be executable.
                  */
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
-                // 
+                // 得到虚拟机物理页帧号, 确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
@@ -878,6 +878,12 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 ```
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
+
+`for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点后面会详细解释。循环中首先判断entry的level和请求的level是否相等，相等说明该entry处引起的violation，即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
+
+如果**level不相等**，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
+
+整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的entry指向的物理页被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，每一级的页表都需要重新构建，则需要处理四次EPTviolation，发生4次VM-exit。
 
 构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用`link_shadow_page`设置页表项指向page
 
