--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -850,7 +850,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
-                // 跳出
+                // 这是整个循环跳出条件
                 if (it.level == level)
                         break;
                 // 
@@ -867,7 +867,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                                 account_huge_nx_page(vcpu->kvm, sp);
                 }
         }
-        // 设置pte，页表下一级的page地址就是pfn写入到pte
+        // 设置pte，页表下一级的page地址就是pfn(HPA)写入到pte
         ret = mmu_set_spte(vcpu, it.sptep, ACC_ALL,
                            write, level, base_gfn, pfn, prefault,
                            map_writable);
@@ -883,7 +883,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 如果**level不相等**，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
 
-整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的entry指向的物理页被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，每一级的页表都需要重新构建，则需要处理四次EPTviolation，发生4次VM-exit。
+整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的entry指向的物理页被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，每一级的页表都需要重新构建，则需要处理四次EPTviolation，发生4次`VM-exit`。
 
 构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用`link_shadow_page`设置页表项指向page
 
