--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -19,7 +19,7 @@
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
-      - [for_each_shadow_entry](#for_each_shadow_entry)
+      - [5.3.2.1. for_each_shadow_entry](#5321-for_each_shadow_entry)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -544,7 +544,8 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
- |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
+ |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 
  |   |   |   |           |   └─ mmu_set_spte();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
@@ -998,9 +999,11 @@ out:
 
 下面`for_each_valid_sp`是一个遍历链表的宏定义，KVM为了根据**GFN**查找对应的`kvm_mmu_page`，用一个**HASH数组**记录**所有**的`kvm_mmu_page`，**每一个表项**都是一个**链表头**，即根据GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
 
-如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，不错这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。这样分配好后，把对应的`kvm_mmu_page`作为一个节点加入到**全局的HASH链表**中，最后返回sp.
+如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。这样分配好后，把对应的`kvm_mmu_page`作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
-#### for_each_shadow_entry
+这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
+
+#### 5.3.2.1. for_each_shadow_entry
 
 ```cpp
 #define for_each_shadow_entry(_vcpu, _addr, _walker)            \
