--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -544,9 +544,10 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
- |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 
- |   |   |   |           |   └─ mmu_set_spte();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
+ |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整level, gfn, pfn
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 分配 kvm_mmu_page(sp)
+ |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将
+ |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
@@ -1034,8 +1035,11 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
                                         struct kvm_vcpu *vcpu, hpa_t root,
                                         u64 addr)
 {
+        // 要查找的虚拟机物理地址
         iterator->addr = addr;
+        // 影子页表level4页表页物理地址, EPT下就是VMCS的EPT pointer
         iterator->shadow_addr = root;
+        // 影子页表级数, EPT下是4
         iterator->level = vcpu->arch.mmu->shadow_root_level;
 
         if (iterator->level == PT64_ROOT_4LEVEL &&
@@ -1075,7 +1079,7 @@ struct kvm_shadow_walk_iterator {
 **每一级的遍历**通过一个`kvm_shadow_walk_iterator`进行，其中各个字段的意义已经注明，我们只需要明白**初始状态**
 
 - `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的`EPT_pointer`, 指向**EPT页表基地址**，下一个要查找的页表就是当前vCPU的根页表目录
-- `addr`是GPA的客户物理地址, 要查找的虚拟机物理地址
+- `addr`是GPA的客户物理地址, 要查找的**虚拟机物理地址**
 - `level = vcpu->arch.mmu->shadow_root_level`, **影子页表的级数**，EPT情况下这个是**4**是当前iterator所处的级别，其值会随着一层一层的遍历递减。
 
 然后看循环条件
