--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -860,7 +860,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 /* 判断当前entry指向的页表是否存在，也就是缺页, 不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
                         // 当前entry指向的页表不存在
-                        // 获取一个页, mmu page
+                        // 获取一个页, 得到的是下一级别 kvm_mmu_page
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
                         // 将当前的mmu page(sp)的地址写入到mmu page的pte中
@@ -1090,7 +1090,7 @@ static bool shadow_walk_okay(struct kvm_shadow_walk_iterator *iterator)
         // < 1
         if (iterator->level < PT_PAGE_TABLE_LEVEL)
                 return false;
-
+        // 虚拟机物理地址在相应level页表中的索引
         iterator->index = SHADOW_PT_INDEX(iterator->addr, iterator->level);
         // 获取GuestOS物理地址在EPT页表对应级别的页表项地址
         iterator->sptep = ((u64 *)__va(iterator->shadow_addr)) + iterator->index;
