--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -545,7 +545,9 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整level, gfn, pfn
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 分配 kvm_mmu_page(sp)
+ |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
+ |   |   |   |               ├─ it.level == level, break;   //  如果页表的level等于
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 遍历EPT页表, 分配 kvm_mmu_page(sp)
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
@@ -860,7 +862,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 /* 判断当前entry指向的页表是否存在，也就是缺页, 不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
                         // 当前entry指向的页表不存在
-                        // 获取一个页, 得到的是下一级别 kvm_mmu_page
+                        // 获取一个页, 得到的是下一级别 kvm_mmu_page(level-1)
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
                         // 将当前的mmu page(sp)的地址写入到mmu page的pte中
