--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -546,7 +546,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整level, gfn, pfn
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
- |   |   |   |               ├─ it.level == level, break;   //  如果页表的level等于
+ |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于该entry引起的violation
  |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 遍历EPT页表, 分配 kvm_mmu_page(sp)
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
@@ -840,6 +840,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         if (WARN_ON(!VALID_PAGE(vcpu->arch.mmu->root_hpa)))
                 return RET_PF_RETRY;
         // 对level和gfn、pfn做出调整
+        // level是gfn转换成hva, 然后得到这个hva映射的level
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
@@ -883,7 +884,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-`for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点后面会详细解释。循环中首先判断entry的level和请求的level是否相等，相等说明该entry处引起的violation，即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
+`for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点后面会详细解释。循环中首先判断**entry的level**和**请求的level**是否相等，相等说明**该entry处引起的violation**，即该**entry对应**的**下级页**或者**页表**不在**内存**中，或者直接为NULL。
 
 如果**level不相等**，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
 
