--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -544,7 +544,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
- |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 调整level, gfn, pfn
+ |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
  |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于该entry引起的violation
  |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 遍历EPT页表, 分配 kvm_mmu_page(sp)
@@ -840,7 +840,8 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         if (WARN_ON(!VALID_PAGE(vcpu->arch.mmu->root_hpa)))
                 return RET_PF_RETRY;
         // 对level和gfn、pfn做出调整
-        // level是gfn转换成hva, 然后得到这个hva映射的level
+        // level是gfn转换成hva, 然后得到这个hva映射的level(根据vcpu->kvm->mm, 这是qemu用户态进程的mm_struct)
+        // 也就是请求的地址使用的level
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
