--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -546,9 +546,9 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
- |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于该entry引起的violation
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 遍历EPT页表, 分配 kvm_mmu_page(sp)
- |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将
+ |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation, 跳出
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
+ |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将分配的下一级页表链接到当前entry
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
@@ -867,7 +867,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                         // 获取一个页, 得到的是下一级别 kvm_mmu_page(level-1)
                         sp = kvm_mmu_get_page(vcpu, base_gfn, it.addr,
                                               it.level - 1, true, ACC_ALL);
-                        // 将当前的mmu page(sp)的地址写入到mmu page的pte中
+                        // 将当前的mmu page(sp)的地址写入到mmu page的pte中(it.sptep)
                         link_shadow_page(vcpu, it.sptep, sp);
                         if (account_disallowed_nx_lpage)
                                 account_huge_nx_page(vcpu->kvm, sp);
@@ -1096,7 +1096,7 @@ static bool shadow_walk_okay(struct kvm_shadow_walk_iterator *iterator)
                 return false;
         // 虚拟机物理地址在相应level页表中的索引
         iterator->index = SHADOW_PT_INDEX(iterator->addr, iterator->level);
-        // 获取GuestOS物理地址在EPT页表对应级别的页表项地址
+        // 获取GuestOS物理地址在EPT页表对应级别的页表项地址, 表项中会指向下一级页表的地址
         iterator->sptep = ((u64 *)__va(iterator->shadow_addr)) + iterator->index;
         return true;
 }
