--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -546,7 +546,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
- |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation, 跳出
+ |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
  |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将分配的下一级页表链接到当前entry
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
@@ -856,10 +856,10 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
-                // 这是整个循环跳出条件
+                // 这是整个循环跳出条件, 说明到了叶子节点
                 if (it.level == level)
                         break;
-                // 
+                // 下面是非叶子节点
                 drop_large_spte(vcpu, it.sptep);
                 /* 判断当前entry指向的页表是否存在，也就是缺页, 不存在的话需要建立 */
                 if (!is_shadow_present_pte(*it.sptep)) {
@@ -893,7 +893,9 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用`link_shadow_page`设置页表项指向page
 
-对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。
+
+对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
